; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_stallion.c_stl_cd1400sendflow.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_stallion.c_stl_cd1400sendflow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stlport = type { i32, i32, %struct.TYPE_2__, i32, i32 }
%struct.TYPE_2__ = type { i32, i32 }
%struct.tty_struct = type { i32 }

@.str = private unnamed_addr constant [39 x i8] c"stl_cd1400sendflow(portp=%p,state=%x)\0A\00", align 1
@brd_lock = common dso_local global i32 0, align 4
@CAR = common dso_local global i32 0, align 4
@CCR = common dso_local global i32 0, align 4
@CCR_SENDSCHR1 = common dso_local global i32 0, align 4
@CCR_SENDSCHR2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.stlport*, i32)* @stl_cd1400sendflow to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stl_cd1400sendflow(%struct.stlport* %0, i32 %1) #0 {
  %3 = alloca %struct.stlport*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.tty_struct*, align 8
  %6 = alloca i64, align 8
  store %struct.stlport* %0, %struct.stlport** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.stlport*, %struct.stlport** %3, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @pr_debug(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), %struct.stlport* %7, i32 %8)
  %10 = load %struct.stlport*, %struct.stlport** %3, align 8
  %11 = icmp eq %struct.stlport* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  br label %76

13:                                               ; preds = %2
  %14 = load %struct.stlport*, %struct.stlport** %3, align 8
  %15 = getelementptr inbounds %struct.stlport, %struct.stlport* %14, i32 0, i32 4
  %16 = call %struct.tty_struct* @tty_port_tty_get(i32* %15)
  store %struct.tty_struct* %16, %struct.tty_struct** %5, align 8
  %17 = load %struct.tty_struct*, %struct.tty_struct** %5, align 8
  %18 = icmp eq %struct.tty_struct* %17, null
  br i1 %18, label %19, label %20

19:                                               ; preds = %13
  br label %76

20:                                               ; preds = %13
  %21 = load i64, i64* %6, align 8
  %22 = call i32 @spin_lock_irqsave(i32* @brd_lock, i64 %21)
  %23 = load %struct.stlport*, %struct.stlport** %3, align 8
  %24 = getelementptr inbounds %struct.stlport, %struct.stlport* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.stlport*, %struct.stlport** %3, align 8
  %27 = getelementptr inbounds %struct.stlport, %struct.stlport* %26, i32 0, i32 3
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @BRDENABLE(i32 %25, i32 %28)
  %30 = load %struct.stlport*, %struct.stlport** %3, align 8
  %31 = load i32, i32* @CAR, align 4
  %32 = load %struct.stlport*, %struct.stlport** %3, align 8
  %33 = getelementptr inbounds %struct.stlport, %struct.stlport* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = and i32 %34, 3
  %36 = call i32 @stl_cd1400setreg(%struct.stlport* %30, i32 %31, i32 %35)
  %37 = load i32, i32* %4, align 4
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %53

39:                                               ; preds = %20
  %40 = load %struct.stlport*, %struct.stlport** %3, align 8
  %41 = call i32 @stl_cd1400ccrwait(%struct.stlport* %40)
  %42 = load %struct.stlport*, %struct.stlport** %3, align 8
  %43 = load i32, i32* @CCR, align 4
  %44 = load i32, i32* @CCR_SENDSCHR1, align 4
  %45 = call i32 @stl_cd1400setreg(%struct.stlport* %42, i32 %43, i32 %44)
  %46 = load %struct.stlport*, %struct.stlport** %3, align 8
  %47 = getelementptr inbounds %struct.stlport, %struct.stlport* %46, i32 0, i32 2
  %48 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %47, i32 0, i32 1
  %49 = load i32, i32* %48, align 4
  %50 = add nsw i32 %49, 1
  store i32 %50, i32* %48, align 4
  %51 = load %struct.stlport*, %struct.stlport** %3, align 8
  %52 = call i32 @stl_cd1400ccrwait(%struct.stlport* %51)
  br label %67

53:                                               ; preds = %20
  %54 = load %struct.stlport*, %struct.stlport** %3, align 8
  %55 = call i32 @stl_cd1400ccrwait(%struct.stlport* %54)
  %56 = load %struct.stlport*, %struct.stlport** %3, align 8
  %57 = load i32, i32* @CCR, align 4
  %58 = load i32, i32* @CCR_SENDSCHR2, align 4
  %59 = call i32 @stl_cd1400setreg(%struct.stlport* %56, i32 %57, i32 %58)
  %60 = load %struct.stlport*, %struct.stlport** %3, align 8
  %61 = getelementptr inbounds %struct.stlport, %struct.stlport* %60, i32 0, i32 2
  %62 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %61, i32 0, i32 0
  %63 = load i32, i32* %62, align 4
  %64 = add nsw i32 %63, 1
  store i32 %64, i32* %62, align 4
  %65 = load %struct.stlport*, %struct.stlport** %3, align 8
  %66 = call i32 @stl_cd1400ccrwait(%struct.stlport* %65)
  br label %67

67:                                               ; preds = %53, %39
  %68 = load %struct.stlport*, %struct.stlport** %3, align 8
  %69 = getelementptr inbounds %struct.stlport, %struct.stlport* %68, i32 0, i32 1
  %70 = load i32, i32* %69, align 4
  %71 = call i32 @BRDDISABLE(i32 %70)
  %72 = load i64, i64* %6, align 8
  %73 = call i32 @spin_unlock_irqrestore(i32* @brd_lock, i64 %72)
  %74 = load %struct.tty_struct*, %struct.tty_struct** %5, align 8
  %75 = call i32 @tty_kref_put(%struct.tty_struct* %74)
  br label %76

76:                                               ; preds = %67, %19, %12
  ret void
}

declare dso_local i32 @pr_debug(i8*, %struct.stlport*, i32) #1

declare dso_local %struct.tty_struct* @tty_port_tty_get(i32*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @BRDENABLE(i32, i32) #1

declare dso_local i32 @stl_cd1400setreg(%struct.stlport*, i32, i32) #1

declare dso_local i32 @stl_cd1400ccrwait(%struct.stlport*) #1

declare dso_local i32 @BRDDISABLE(i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @tty_kref_put(%struct.tty_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
